# gps-updater

./: .gitignore  DESIGN.md  FUTURE_IDEAS.md  LICENSE  README.md  SPEC.md  STATUS_FILE.md  TASKS.md  VISUAL_VERIFICATION.md  pyproject.toml
gps_updater/: __main__.py  cli.py  config.py  deps.py  display.py  exiftool.py  gpx_parser.py  logger.py  matcher.py  media_scanner.py  models.py  plugins.py  reference_scanner.py  report.py  writer.py
plugins/: apple_iphone.json  canon_eos.json  dji.json  fujifilm_x.json  google_pixel.json  gopro_hero.json  nikon.json  samsung_galaxy.json  sony_alpha.json
tests/: test_config.py  test_gpx_parser.py  test_matcher.py  test_models.py  test_plugins.py  test_reference_scanner.py
tests/fixtures/: no_timestamps.gpx  sample_offset.gpx  sample_utc.gpx
