[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gps-updater"
version = "0.1.0"
description = "Match GPX tracks to photos and videos and write GPS coordinates into media metadata"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "gpxpy>=1.6",
    "PyExifTool>=0.5",
    "tzdata>=2024.1",
]

[project.scripts]
gps-updater = "gps_updater.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["gps_updater"]

[tool.pytest.ini_options]
testpaths = ["tests"]
